--- a/src/css/landing.css
+++ b/src/css/landing.css
@@ -12,7 +12,8 @@
     justify-content: center;
     align-items: center;
     background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url(../images/banner-placeholder.jpg);
-    background-position: fixed;
+    background-position: center;
+    background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: cover; }
     .landing-container .banner h1,
