--- a/src/scss/landing.scss
+++ b/src/scss/landing.scss
@@ -13,7 +13,8 @@
 		align-items: center;
 		background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
 			url(../images/banner-placeholder.jpg);
-		background-position: fixed;
+		background-position: center;
+		background-attachment: fixed;
 		background-repeat: no-repeat;
 		background-size: cover;
 		h1,
