--- a/src/css/landing.css
+++ b/src/css/landing.css
@@ -21,3 +21,16 @@
       opacity: 0.8; }
     .landing-container .banner h1 {
       font-size: 50px; }
+  .landing-container .description {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 70%;
+    height: 30vh; }
+    .landing-container .description p {
+      width: 80%;
+      padding: 40px;
+      font-size: 20px;
+      background-color: #9df3c4;
+      border-radius: 10px;
+      box-shadow: 7px 10px 10px #d7fbe8; }
