--- a/src/scss/nav.scss
+++ b/src/scss/nav.scss
@@ -3,10 +3,10 @@ nav {
 	flex-direction: row;
 	justify-content: space-between;
 	align-items: center;
-
+	height: 20vh;
 	img {
-		height: 15vw;
-		width: 15vw;
+		height: 18vh;
+		width: auto;
 		margin-left: 3vw;
 	}
 	ul {
