styling added to review cards

--- a/src/css/landing.css
+++ b/src/css/landing.css
@@ -31,6 +31,6 @@
       width: 80%;
       padding: 40px;
       font-size: 20px;
-      background-color: #9df3c4;
+      background-color: #d7fbe8;
       border-radius: 10px;
-      box-shadow: 7px 10px 10px #d7fbe8; }
+      box-shadow: 7px 10px 10px #9df3c4; }
