--- a/src/scss/variables/_variables.scss
+++ b/src/scss/variables/_variables.scss
@@ -1,4 +1,4 @@
 $background-color: white;
-$container-shadow: #d7fbe8;
-$container-color: #9df3c4;
+$container-color: #d7fbe8;
+$container-shadow: #9df3c4;
 $nav-color: #1fab89;
