--- a/src/scss/review.scss
+++ b/src/scss/review.scss
@@ -4,6 +4,12 @@
 	display: flex;
 	flex-direction: column;
 	width: 70%;
+	h2 {
+		width: auto;
+		text-align: center;
+		font-size: 40px;
+		margin: 5vh auto 10vh auto;
+	}
 	.review {
 		display: flex;
 		flex-direction: column;
@@ -16,8 +22,24 @@
 		background-color: $container-color;
 		border-radius: 10px;
 		box-shadow: 7px 10px 10px $container-shadow;
+		p:nth-child(1)::before,
+		p:nth-child(1)::after {
+			content: '“';
+			font-size: 32px;
+			font-family: Georgia, 'Times New Roman', Times, serif;
+			color: #134977;
+			font-weight: bold;
+			vertical-align: top;
+			line-height: 0.8;
+		}
+		p:nth-child(1)::after {
+			content: '”';
+		}
+		p:nth-child(2) {
+			font-style: italic;
+		}
 	}
-	.review:nth-child(2) {
+	.review:nth-child(3) {
 		margin-left: 30%;
 	}
 }
