banner made full width. banner text styled

--- a/src/scss/variables/_variables.scss
+++ b/src/scss/variables/_variables.scss
@@ -1,4 +1,5 @@
 $background-color: white;
 $container-color: #d7fbe8;
 $container-shadow: #9df3c4;
-$nav-color: #1fab89;
+$text-shadow: #1fab89;
+$title-container-color: #d7fbe88e;
