--- a/src/css/landing.css
+++ b/src/css/landing.css
@@ -4,7 +4,7 @@
   justify-content: center;
   align-items: center; }
   .landing-container .banner {
-    width: 70%;
+    width: 100%;
     height: 50vh;
     display: flex;
     flex-direction: column;
@@ -15,12 +15,23 @@
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: cover; }
-    .landing-container .banner h1,
-    .landing-container .banner h2 {
-      color: white;
-      opacity: 0.8; }
-    .landing-container .banner h1 {
-      font-size: 50px; }
+    .landing-container .banner .titles {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      padding: 30px 50px;
+      border-radius: 10px; }
+      .landing-container .banner .titles h1,
+      .landing-container .banner .titles h2 {
+        color: white;
+        opacity: 0.85;
+        text-shadow: 2px 2px 3px #1fab89; }
+      .landing-container .banner .titles h1 {
+        font-size: 70px;
+        margin-bottom: 10px; }
+      .landing-container .banner .titles h2 {
+        font-size: 30px; }
   .landing-container .description {
     display: flex;
     justify-content: center;
