--- a/src/scss/landing.scss
+++ b/src/scss/landing.scss
@@ -6,7 +6,7 @@
 	justify-content: center;
 	align-items: center;
 	.banner {
-		width: 70%;
+		width: 100%;
 		height: 50vh;
 		display: flex;
 		flex-direction: column;
@@ -18,13 +18,26 @@
 		background-attachment: fixed;
 		background-repeat: no-repeat;
 		background-size: cover;
-		h1,
-		h2 {
-			color: white;
-			opacity: 0.8;
-		}
-		h1 {
-			font-size: 50px;
+		.titles {
+			display: flex;
+			flex-direction: column;
+			justify-content: center;
+			align-items: center;
+			padding: 30px 50px;
+			border-radius: 10px;
+			h1,
+			h2 {
+				color: white;
+				opacity: 0.85;
+				text-shadow: 2px 2px 3px $text-shadow;
+			}
+			h1 {
+				font-size: 70px;
+				margin-bottom: 10px;
+			}
+			h2 {
+				font-size: 30px;
+			}
 		}
 	}
 	.description {
