--- a/src/css/review.css
+++ b/src/css/review.css
@@ -2,36 +2,53 @@
 .reviews {
   display: flex;
   flex-direction: column;
-  width: 70%; }
-  .reviews h2 {
-    width: auto;
-    text-align: center;
-    font-size: 40px;
-    margin: 5vh auto 10vh auto; }
-  .reviews .review {
+  align-items: center;
+  width: 100%; }
+  .reviews .reviews-banner {
+    width: 100%;
+    height: 30vh;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
-    width: 70%;
-    height: 15vh;
-    margin-bottom: 5vh;
-    padding: 40px;
-    font-size: 20px;
-    background-color: #d7fbe8;
-    border-radius: 10px;
-    box-shadow: 7px 10px 10px #9df3c4; }
-    .reviews .review p:nth-child(1)::before,
-    .reviews .review p:nth-child(1)::after {
-      content: '“';
-      font-size: 32px;
-      font-family: Georgia, 'Times New Roman', Times, serif;
-      color: #134977;
-      font-weight: bold;
-      vertical-align: top;
-      line-height: 0.8; }
-    .reviews .review p:nth-child(1)::after {
-      content: '”'; }
-    .reviews .review p:nth-child(2) {
-      font-style: italic; }
-  .reviews .review:nth-child(3) {
-    margin-left: 30%; }
+    justify-content: center;
+    align-items: center;
+    background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url(../images/banner-placeholder-2.jpg);
+    background-position: center;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin-bottom: 5vh; }
+    .reviews .reviews-banner h2 {
+      color: white;
+      opacity: 0.85;
+      text-shadow: 2px 2px 3px #1fab89;
+      text-align: center;
+      font-size: 50px; }
+  .reviews .reviews-container {
+    width: 70%; }
+    .reviews .reviews-container .review {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-around;
+      width: 70%;
+      height: 15vh;
+      margin-bottom: 5vh;
+      padding: 40px;
+      font-size: 20px;
+      background-color: #d7fbe8;
+      border-radius: 10px;
+      box-shadow: 7px 10px 10px #9df3c4; }
+      .reviews .reviews-container .review p:nth-child(1)::before,
+      .reviews .reviews-container .review p:nth-child(1)::after {
+        content: '“';
+        font-size: 32px;
+        font-family: Georgia, 'Times New Roman', Times, serif;
+        color: #134977;
+        font-weight: bold;
+        vertical-align: top;
+        line-height: 0.8; }
+      .reviews .reviews-container .review p:nth-child(1)::after {
+        content: '”'; }
+      .reviews .reviews-container .review p:nth-child(2) {
+        font-style: italic; }
+    .reviews .reviews-container .review:nth-child(2) {
+      margin-left: 30%; }
