--- a/src/scss/landing.scss
+++ b/src/scss/landing.scss
@@ -5,7 +5,7 @@
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	.banner {
+	.title-banner {
 		width: 100%;
 		height: 50vh;
 		display: flex;
