--- a/src/scss/review.scss
+++ b/src/scss/review.scss
@@ -3,43 +3,63 @@
 .reviews {
 	display: flex;
 	flex-direction: column;
-	width: 70%;
-	h2 {
-		width: auto;
-		text-align: center;
-		font-size: 40px;
-		margin: 5vh auto 10vh auto;
-	}
-	.review {
+	align-items: center;
+	width: 100%;
+	.reviews-banner {
+		width: 100%;
+		height: 30vh;
 		display: flex;
 		flex-direction: column;
-		justify-content: space-around;
-		width: 70%;
-		height: 15vh;
+		justify-content: center;
+		align-items: center;
+		background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
+			url(../images/banner-placeholder-2.jpg);
+		background-position: center;
+		background-attachment: fixed;
+		background-repeat: no-repeat;
+		background-size: cover;
+		h2 {
+			color: white;
+			opacity: 0.85;
+			text-shadow: 2px 2px 3px $text-shadow;
+			text-align: center;
+			font-size: 50px;
+		}
 		margin-bottom: 5vh;
-		padding: 40px;
-		font-size: 20px;
-		background-color: $container-color;
-		border-radius: 10px;
-		box-shadow: 7px 10px 10px $container-shadow;
-		p:nth-child(1)::before,
-		p:nth-child(1)::after {
-			content: '“';
-			font-size: 32px;
-			font-family: Georgia, 'Times New Roman', Times, serif;
-			color: #134977;
-			font-weight: bold;
-			vertical-align: top;
-			line-height: 0.8;
-		}
-		p:nth-child(1)::after {
-			content: '”';
-		}
-		p:nth-child(2) {
-			font-style: italic;
-		}
 	}
-	.review:nth-child(3) {
-		margin-left: 30%;
+	.reviews-container {
+		width: 70%;
+		.review {
+			display: flex;
+			flex-direction: column;
+			justify-content: space-around;
+			width: 70%;
+			height: 15vh;
+			margin-bottom: 5vh;
+			padding: 40px;
+			font-size: 20px;
+			background-color: $container-color;
+			border-radius: 10px;
+			box-shadow: 7px 10px 10px $container-shadow;
+			p:nth-child(1)::before,
+			p:nth-child(1)::after {
+				content: '“';
+				font-size: 32px;
+				font-family: Georgia, 'Times New Roman', Times, serif;
+				color: #134977;
+				font-weight: bold;
+				vertical-align: top;
+				line-height: 0.8;
+			}
+			p:nth-child(1)::after {
+				content: '”';
+			}
+			p:nth-child(2) {
+				font-style: italic;
+			}
+		}
+		.review:nth-child(2) {
+			margin-left: 30%;
+		}
 	}
 }
