description paragraph given a border

--- a/src/css/landing.css
+++ b/src/css/landing.css
@@ -36,12 +36,13 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 70%;
-    height: 30vh; }
+    min-height: 30vh; }
     .landing-container .description p {
-      width: 80%;
-      padding: 40px;
+      width: 60%;
+      padding: 20px;
+      margin: 5vh;
       font-size: 20px;
       background-color: #d7fbe8;
+      border: 2px outset #9df3c4;
       border-radius: 10px;
       box-shadow: 7px 10px 10px #9df3c4; }
