--- a/src/css/review.css
+++ b/src/css/review.css
@@ -35,6 +35,7 @@
       padding: 40px;
       font-size: 20px;
       background-color: #d7fbe8;
+      border: 2px outset #9df3c4;
       border-radius: 10px;
       box-shadow: 7px 10px 10px #9df3c4; }
       .reviews .reviews-container .review p:nth-child(1)::before,
