--- a/src/scss/review.scss
+++ b/src/scss/review.scss
@@ -39,6 +39,7 @@
 			padding: 40px;
 			font-size: 20px;
 			background-color: $container-color;
+			border: 2px outset $container-shadow;
 			border-radius: 10px;
 			box-shadow: 7px 10px 10px $container-shadow;
 			p:nth-child(1)::before,
