--- a/src/scss/variables/_variables.scss
+++ b/src/scss/variables/_variables.scss
@@ -1,5 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital@0;1&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,300;0,400;1,300;1,400&display=swap');
+
 $background-color: white;
 $container-color: #d7fbe8;
 $container-shadow: #9df3c4;
 $text-shadow: #1fab89;
 $title-container-color: #d7fbe88e;
+
+$text-font: 'Nunito Sans', sans-serif;
+$title-font: 'Josefin Sans', sans-serif;
