--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:ital@0;1&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,300;0,400;1,300;1,400&display=swap");
 nav {
   display: flex;
   flex-direction: row;
@@ -18,6 +20,7 @@ nav {
     nav ul li {
       transition: all 0.3s; }
       nav ul li a {
+        font-family: "Nunito Sans", sans-serif;
         font-size: 30px;
         color: black;
         text-decoration: none; }
