--- a/src/css/review.css
+++ b/src/css/review.css
@@ -1,4 +1,6 @@
 @charset "UTF-8";
+@import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:ital@0;1&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,300;0,400;1,300;1,400&display=swap");
 .reviews {
   display: flex;
   flex-direction: column;
@@ -18,13 +20,16 @@
     background-size: cover;
     margin-bottom: 5vh; }
     .reviews .reviews-banner h2 {
+      font-family: "Josefin Sans", sans-serif;
+      font-weight: 300;
       color: white;
       opacity: 0.85;
       text-shadow: 2px 2px 3px #1fab89;
       text-align: center;
-      font-size: 50px; }
+      font-size: 3.5vw; }
   .reviews .reviews-container {
-    width: 70%; }
+    width: 70%;
+    font-family: "Nunito Sans", sans-serif; }
     .reviews .reviews-container .review {
       display: flex;
       flex-direction: column;
