--- a/src/scss/nav.scss
+++ b/src/scss/nav.scss
@@ -22,6 +22,7 @@ nav {
 		li {
 			transition: all 0.3s;
 			a {
+				font-family: $text-font;
 				font-size: 30px;
 				color: black;
 				text-decoration: none;
