--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,4 +1,11 @@
+@import './variables/variables';
+
 * {
 	margin: 0;
 	padding: 0;
+}
+
+footer {
+	min-height: 20vh;
+	background-color: $footer-color;
 }
