--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,3 +1,9 @@
+@import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:ital@0;1&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,300;0,400;1,300;1,400&display=swap");
 * {
   margin: 0;
   padding: 0; }
+
+footer {
+  min-height: 20vh;
+  background-color: #13614d; }
