--- a/src/scss/variables/_variables.scss
+++ b/src/scss/variables/_variables.scss
@@ -6,6 +6,7 @@ $container-color: #d7fbe8;
 $container-shadow: #9df3c4;
 $text-shadow: #1fab89;
 $title-container-color: #d7fbe88e;
+$footer-color: #13614d;
 
 $text-font: 'Nunito Sans', sans-serif;
 $title-font: 'Josefin Sans', sans-serif;
