--- a/src/css/landing.css
+++ b/src/css/landing.css
@@ -41,11 +41,12 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height: 30vh; }
+    min-height: 30vh;
+    width: 70%; }
     .landing-container .description p {
-      width: 60%;
+      width: auto;
       padding: 20px;
-      margin: 5vh;
+      margin: 5vh 0;
       font-size: 20px;
       background-color: #d7fbe8;
       border: 2px outset #9df3c4;
