--- a/src/css/review.css
+++ b/src/css/review.css
@@ -28,15 +28,19 @@
       text-align: center;
       font-size: 3.5vw; }
   .reviews .reviews-container {
+    display: flex;
+    flex-direction: column;
     width: 70%;
     font-family: "Nunito Sans", sans-serif; }
     .reviews .reviews-container .review {
       display: flex;
       flex-direction: column;
       justify-content: space-around;
-      width: 70%;
+      align-items: flex-start;
+      width: 64%;
       height: 15vh;
       margin-bottom: 5vh;
+      margin-right: 0;
       padding: 40px;
       font-size: 20px;
       background-color: #d7fbe8;
@@ -57,4 +61,4 @@
       .reviews .reviews-container .review p:nth-child(2) {
         font-style: italic; }
     .reviews .reviews-container .review:nth-child(2) {
-      margin-left: 30%; }
+      align-self: flex-end; }
