width bug fixed on tiles

--- a/src/scss/about.scss
+++ b/src/scss/about.scss
@@ -67,7 +67,7 @@
 			grid-template-columns: 1fr 1fr;
 			background-color: $container-color;
 			img {
-				width: 50vw;
+				width: 100%;
 				height: 50vh;
 				object-fit: cover;
 			}
