--- a/src/css/about.css
+++ b/src/css/about.css
@@ -58,7 +58,7 @@
     grid-template-columns: 1fr 1fr;
     background-color: #d7fbe8; }
     .about-container .facilities .tiles img {
-      width: 50vw;
+      width: 100%;
       height: 50vh;
       object-fit: cover; }
     .about-container .facilities .tiles p {
