--- a/src/css/about.css
+++ b/src/css/about.css
@@ -69,3 +69,20 @@
       padding: 5%;
       border-radius: 10px;
       background-color: #9df3c4; }
+  .about-container .links {
+    height: 40vh;
+    display: grid;
+    grid-template-columns: 1fr 1fr; }
+    .about-container .links a {
+      text-decoration: none;
+      text-align: center;
+      justify-self: center;
+      align-self: center;
+      background-color: #d7fbe8;
+      padding: 20px 10px;
+      border-radius: 10px; }
+      .about-container .links a p {
+        width: 20vw;
+        font-family: "Josefin Sans", sans-serif;
+        font-size: 2.7vw;
+        color: black; }
