--- a/src/css/about.css
+++ b/src/css/about.css
@@ -56,7 +56,7 @@
   .about-container .facilities .tiles {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    background-color: #d7fbe8; }
+    background-color: #9df3c4; }
     .about-container .facilities .tiles img {
       width: 100%;
       height: 50vh;
@@ -67,8 +67,10 @@
       text-align: center;
       width: 60%;
       padding: 5%;
+      background-color: #d7fbe8;
+      border: 2px outset #9df3c4;
       border-radius: 10px;
-      background-color: #9df3c4; }
+      box-shadow: 7px 10px 10px #d7fbe8; }
   .about-container .links {
     height: 40vh;
     display: grid;
