--- a/src/scss/about.scss
+++ b/src/scss/about.scss
@@ -65,7 +65,7 @@
 		.tiles {
 			display: grid;
 			grid-template-columns: 1fr 1fr;
-			background-color: $container-color;
+			background-color: $container-shadow;
 			img {
 				width: 100%;
 				height: 50vh;
@@ -77,8 +77,10 @@
 				text-align: center;
 				width: 60%;
 				padding: 5%;
+				background-color: $container-color;
+				border: 2px outset $container-shadow;
 				border-radius: 10px;
-				background-color: $container-shadow;
+				box-shadow: 7px 10px 10px $container-color;
 			}
 		}
 	}
