--- a/src/scss/about.scss
+++ b/src/scss/about.scss
@@ -94,6 +94,8 @@
 			justify-self: center;
 			align-self: center;
 			background-color: $container-color;
+			border: 2px outset $container-shadow;
+			box-shadow: 7px 10px 10px $container-color;
 			padding: 20px 10px;
 			border-radius: 10px;
 			p {
