--- a/src/css/services.css
+++ b/src/css/services.css
@@ -1,2 +1,45 @@
 @import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:ital@0;1&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,300;0,400;1,300;1,400&display=swap");
+.services {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center; }
+  .services h1,
+  .services h2 {
+    font-family: "Josefin Sans", sans-serif;
+    font-weight: 300;
+    text-shadow: 2px 2px 3px #1fab89;
+    opacity: 0.85; }
+  .services p,
+  .services td {
+    font-family: "Nunito Sans", sans-serif;
+    font-size: 20px; }
+  .services .our-services {
+    width: 100%;
+    display: grid;
+    grid-template: 1fr 3fr / 1fr 1fr;
+    height: 85vh;
+    background: linear-gradient(#9df3c4, white); }
+    .services .our-services h1 {
+      grid-column-start: 1;
+      justify-self: center;
+      align-self: center;
+      font-size: 5vw;
+      text-align: center; }
+    .services .our-services img {
+      grid-area: 1 / 2 / 3 / 3;
+      justify-self: center;
+      align-self: center;
+      max-width: 40vw;
+      max-height: 40vw;
+      height: 70vh;
+      width: 70vh;
+      border-radius: 50%;
+      object-fit: cover;
+      object-position: 50% 35%; }
+    .services .our-services p {
+      justify-self: center;
+      align-self: start;
+      width: 40vw;
+      margin-top: 10vh; }
