--- a/src/css/services.css
+++ b/src/css/services.css
@@ -76,3 +76,45 @@
             padding: 10px 0; }
           .services .prices .tables .table table tr td:nth-child(2) {
             text-align: center; }
+  .services .important-information {
+    background: linear-gradient(#d7fbe8, white);
+    width: 100%;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    justify-content: center;
+    margin-bottom: 10vh; }
+    .services .important-information h1 {
+      grid-column: 1 / 3;
+      font-size: 5vw;
+      text-align: center;
+      padding: 10vh; }
+    .services .important-information .information {
+      align-self: center;
+      justify-self: center;
+      width: 80%; }
+      .services .important-information .information p {
+        background-color: #d7fbe8;
+        padding: 30px;
+        border-radius: 10px;
+        box-shadow: 7px 10px 10px #9df3c4;
+        border: 2px outset #9df3c4; }
+    .services .important-information .opening-hours {
+      display: grid; }
+      .services .important-information .opening-hours h2 {
+        justify-self: center;
+        align-self: center;
+        font-size: 3vw; }
+      .services .important-information .opening-hours table {
+        justify-self: center;
+        width: 80%;
+        background-color: #d7fbe8;
+        padding: 30px;
+        border-radius: 10px;
+        box-shadow: 7px 10px 10px #9df3c4;
+        border: 2px outset #9df3c4; }
+        .services .important-information .opening-hours table tr td {
+          border-bottom: 5px dotted #13614d;
+          border-right: none;
+          padding: 10px 0; }
+        .services .important-information .opening-hours table tr td:nth-child(2) {
+          text-align: center; }
