--- a/src/scss/services.scss
+++ b/src/scss/services.scss
@@ -17,6 +17,7 @@
 		font-family: $text-font;
 		font-size: 20px;
 	}
+
 	.our-services {
 		width: 100%;
 		display: grid;
@@ -87,6 +88,60 @@
 						td:nth-child(2) {
 							text-align: center;
 						}
+					}
+				}
+			}
+		}
+	}
+	.important-information {
+		background: linear-gradient($container-color, white);
+		width: 100%;
+		display: grid;
+		grid-template-columns: 1fr 1fr;
+		justify-content: center;
+		margin-bottom: 10vh;
+		h1 {
+			grid-column: 1 / 3;
+			font-size: 5vw;
+			text-align: center;
+			padding: 10vh;
+		}
+		.information {
+			align-self: center;
+			justify-self: center;
+			width: 80%;
+			p {
+				background-color: $container-color;
+				padding: 30px;
+				border-radius: 10px;
+				box-shadow: 7px 10px 10px $container-shadow;
+				border: 2px outset $container-shadow;
+			}
+		}
+		.opening-hours {
+			display: grid;
+			h2 {
+				justify-self: center;
+				align-self: center;
+				font-size: 3vw;
+			}
+
+			table {
+				justify-self: center;
+				width: 80%;
+				background-color: $container-color;
+				padding: 30px;
+				border-radius: 10px;
+				box-shadow: 7px 10px 10px $container-shadow;
+				border: 2px outset $container-shadow;
+				tr {
+					td {
+						border-bottom: 5px dotted $footer-color;
+						border-right: none;
+						padding: 10px 0;
+					}
+					td:nth-child(2) {
+						text-align: center;
 					}
 				}
 			}
