--- a/src/scss/contact.scss
+++ b/src/scss/contact.scss
@@ -1,1 +1,94 @@
 @import 'variables/variables';
+
+.contact {
+	h1,
+	h2 {
+		font-family: $title-font;
+		font-weight: 300;
+	}
+	p,
+	td {
+		font-size: 20px;
+		font-family: $text-font;
+	}
+	.contact-info {
+		display: grid;
+		grid-template-columns: 1fr 1fr;
+		justify-items: center;
+		align-items: center;
+		background-color: $container-shadow;
+		padding-bottom: 10vh;
+		.banner {
+			height: 40vh;
+			width: 100%;
+			grid-column: 1 / 3;
+			display: flex;
+			flex-direction: column;
+			justify-content: center;
+			align-items: center;
+			background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
+				url(../images/banner-placeholder-3.jpg);
+			background-position: 50% 10%;
+			background-attachment: fixed;
+			background-repeat: no-repeat;
+			background-size: cover;
+			h1,
+			h2 {
+				color: white;
+				opacity: 0.85;
+				text-shadow: 2px 2px 3px $text-shadow;
+			}
+			h1 {
+				font-size: 5vw;
+				margin-bottom: 5vh;
+			}
+			h2 {
+				font-size: 2.5vw;
+				font-style: italic;
+			}
+		}
+		p {
+			width: 70%;
+			padding: 5%;
+			background-color: $container-color;
+			border: 2px outset $container-shadow;
+			border-radius: 10px;
+			box-shadow: 7px 10px 10px $container-color;
+		}
+		table {
+			justify-self: center;
+			max-width: 80%;
+			min-width: 60%;
+			background-color: $container-color;
+			padding: 30px;
+			border-radius: 10px;
+			box-shadow: 7px 10px 10px $container-color;
+			border: 2px outset $container-shadow;
+			margin: 3vw;
+			tr {
+				td {
+					border-bottom: 5px dotted $footer-color;
+					border-right: none;
+					padding: 10px 0;
+				}
+				td:nth-child(2) {
+					text-align: center;
+				}
+			}
+		}
+		iframe {
+			width: 40vw;
+			border-radius: 10px;
+			box-shadow: 7px 10px 10px $container-color;
+			border: 1px solid $container-shadow;
+		}
+		.contact-details {
+			width: 100%;
+			height: 100%;
+			display: flex;
+			flex-direction: column;
+			justify-content: center;
+			align-items: center;
+		}
+	}
+}
