--- a/src/css/contact.css
+++ b/src/css/contact.css
@@ -3,12 +3,26 @@
 .contact h1,
 .contact h2 {
   font-family: "Josefin Sans", sans-serif;
-  font-weight: 300; }
+  font-weight: 300;
+  color: white;
+  opacity: 0.85;
+  text-shadow: 2px 2px 3px #1fab89; }
+
+.contact h1 {
+  font-size: 5vw; }
 
 .contact p,
 .contact td {
   font-size: 20px;
   font-family: "Nunito Sans", sans-serif; }
+
+.contact p {
+  width: 70%;
+  padding: 5%;
+  background-color: #d7fbe8;
+  border: 2px outset #9df3c4;
+  border-radius: 10px;
+  box-shadow: 7px 10px 10px #d7fbe8; }
 
 .contact .contact-info {
   display: grid;
@@ -30,13 +44,7 @@
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: cover; }
-    .contact .contact-info .banner h1,
-    .contact .contact-info .banner h2 {
-      color: white;
-      opacity: 0.85;
-      text-shadow: 2px 2px 3px #1fab89; }
     .contact .contact-info .banner h1 {
-      font-size: 5vw;
       margin-bottom: 5vh; }
     .contact .contact-info .banner h2 {
       font-size: 2.5vw;
@@ -76,3 +84,26 @@
     flex-direction: column;
     justify-content: center;
     align-items: center; }
+
+.contact .review-us {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  justify-items: center;
+  align-items: center;
+  background-color: #9df3c4;
+  padding-bottom: 10vh; }
+  .contact .review-us .banner {
+    height: 40vh;
+    width: 100%;
+    grid-column: 1 / 3;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url(../images/banner-placeholder-4.jpg);
+    background-position: 50% 80%;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-size: cover; }
+  .contact .review-us p {
+    margin-top: 10vh; }
