--- a/src/css/services.css
+++ b/src/css/services.css
@@ -119,3 +119,23 @@
           padding: 10px 0; }
         .services .important-information .opening-hours table tr td:nth-child(2) {
           text-align: center; }
+  .services .links {
+    width: 100%;
+    height: 40vh;
+    display: grid;
+    grid-template-columns: 1fr 1fr; }
+    .services .links a {
+      text-decoration: none;
+      text-align: center;
+      justify-self: center;
+      align-self: center;
+      background-color: #d7fbe8;
+      border: 2px outset #9df3c4;
+      box-shadow: 7px 10px 10px #d7fbe8;
+      padding: 20px 10px;
+      border-radius: 10px; }
+      .services .links a p {
+        width: 20vw;
+        font-family: "Josefin Sans", sans-serif;
+        font-size: 2.7vw;
+        color: black; }
