--- a/src/scss/services.scss
+++ b/src/scss/services.scss
@@ -148,4 +148,27 @@
 			}
 		}
 	}
+	.links {
+		width: 100%;
+		height: 40vh;
+		display: grid;
+		grid-template-columns: 1fr 1fr;
+		a {
+			text-decoration: none;
+			text-align: center;
+			justify-self: center;
+			align-self: center;
+			background-color: $container-color;
+			border: 2px outset $container-shadow;
+			box-shadow: 7px 10px 10px $container-color;
+			padding: 20px 10px;
+			border-radius: 10px;
+			p {
+				width: 20vw;
+				font-family: $title-font;
+				font-size: 2.7vw;
+				color: black;
+			}
+		}
+	}
 }
