--- a/src/scss/variables/_variables.scss
+++ b/src/scss/variables/_variables.scss
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital@0;1&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,300;0,400;1,300;1,400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Alegreya:ital@0;1&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;1,300;1,400&display=swap');
 
 $background-color: white;
 $container-color: #d7fbe8;
@@ -8,5 +10,5 @@ $text-shadow: #1fab89;
 $title-container-color: #d7fbe88e;
 $footer-color: #13614d;
 
-$text-font: 'Nunito Sans', sans-serif;
-$title-font: 'Josefin Sans', sans-serif;
+$text-font: 'Alegreya', serif;
+$title-font: 'Montserrat', sans-serif;
