--- a/src/css/landing.css
+++ b/src/css/landing.css
@@ -1,5 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:ital@0;1&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,300;0,400;1,300;1,400&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Alegreya:ital@0;1&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;1,300;1,400&display=swap");
 .landing-container {
   display: flex;
   flex-direction: column;
@@ -26,7 +28,7 @@
       border-radius: 10px; }
       .landing-container .title-banner .titles h1,
       .landing-container .title-banner .titles h2 {
-        font-family: "Josefin Sans", sans-serif;
+        font-family: "Montserrat", sans-serif;
         font-weight: 300;
         color: white;
         opacity: 0.85;
