--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -1,5 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:ital@0;1&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,300;0,400;1,300;1,400&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Alegreya:ital@0;1&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;1,300;1,400&display=swap");
 nav {
   display: flex;
   flex-direction: row;
@@ -15,7 +17,7 @@ nav {
       width: auto;
       margin-left: 3vw; }
     nav .logo h4 {
-      font-family: "Josefin Sans", sans-serif;
+      font-family: "Montserrat", sans-serif;
       font-size: 5vh; }
   nav ul {
     display: flex;
@@ -27,7 +29,7 @@ nav {
     nav ul li {
       transition: all 0.3s; }
       nav ul li a {
-        font-family: "Nunito Sans", sans-serif;
+        font-family: "Alegreya", serif;
         font-size: 30px;
         color: black;
         text-decoration: none; }
