--- a/src/css/review.css
+++ b/src/css/review.css
@@ -1,6 +1,8 @@
 @charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:ital@0;1&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,300;0,400;1,300;1,400&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Alegreya:ital@0;1&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;1,300;1,400&display=swap");
 .reviews {
   display: flex;
   flex-direction: column;
@@ -20,7 +22,7 @@
     background-size: cover;
     margin-bottom: 5vh; }
     .reviews .reviews-banner h2 {
-      font-family: "Josefin Sans", sans-serif;
+      font-family: "Montserrat", sans-serif;
       font-weight: 300;
       color: white;
       opacity: 0.85;
@@ -31,7 +33,7 @@
     display: flex;
     flex-direction: column;
     width: 70%;
-    font-family: "Nunito Sans", sans-serif; }
+    font-family: "Alegreya", serif; }
     .reviews .reviews-container .review {
       display: flex;
       flex-direction: column;
