--- a/src/css/services.css
+++ b/src/css/services.css
@@ -1,5 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:ital@0;1&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,300;0,400;1,300;1,400&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Alegreya:ital@0;1&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;1,300;1,400&display=swap");
 .services {
   display: flex;
   flex-direction: column;
@@ -7,13 +9,13 @@
   align-items: center; }
   .services h1,
   .services h2 {
-    font-family: "Josefin Sans", sans-serif;
+    font-family: "Montserrat", sans-serif;
     font-weight: 300;
     text-shadow: 2px 2px 3px #1fab89;
     opacity: 0.85; }
   .services p,
   .services td {
-    font-family: "Nunito Sans", sans-serif;
+    font-family: "Alegreya", serif;
     font-size: 20px; }
   .services .our-services {
     width: 100%;
@@ -136,6 +138,6 @@
       border-radius: 10px; }
       .services .links a p {
         width: 20vw;
-        font-family: "Josefin Sans", sans-serif;
+        font-family: "Montserrat", sans-serif;
         font-size: 2.7vw;
         color: black; }
