--- a/src/scss/about.scss
+++ b/src/scss/about.scss
@@ -12,7 +12,7 @@
 	.family {
 		display: grid;
 		grid-template-columns: 1fr 1fr;
-		height: 85vh;
+		height: 90vh;
 		background: linear-gradient($container-shadow, white);
 		.family-text {
 			justify-self: center;
@@ -88,10 +88,9 @@
 				text-align: center;
 				width: 60%;
 				padding: 5%;
-				background-color: $container-color;
-				border: 2px outset $container-shadow;
+				margin-bottom: 1%;
+				background-color: white;
 				border-radius: 10px;
-				box-shadow: 7px 10px 10px $container-color;
 			}
 		}
 	}
