--- a/src/css/about.css
+++ b/src/css/about.css
@@ -10,7 +10,7 @@
   .about-container .family {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    height: 85vh;
+    height: 90vh;
     background: linear-gradient(#9df3c4, white); }
     .about-container .family .family-text {
       justify-self: center;
@@ -77,10 +77,9 @@
       text-align: center;
       width: 60%;
       padding: 5%;
-      background-color: #d7fbe8;
-      border: 2px outset #9df3c4;
-      border-radius: 10px;
-      box-shadow: 7px 10px 10px #d7fbe8; }
+      margin-bottom: 1%;
+      background-color: white;
+      border-radius: 10px; }
   .about-container .links {
     height: 40vh;
     display: grid;
