--- a/src/css/landing.css
+++ b/src/css/landing.css
@@ -7,7 +7,7 @@
   align-items: center; }
   .landing-container .title-banner {
     width: 100%;
-    height: 50vh;
+    height: 60vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -48,6 +48,7 @@
       padding: 20px;
       margin: 5vh 0;
       font-size: 20px;
+      font-family: "Alegreya", serif;
       background-color: #d7fbe8;
       border: 2px outset #9df3c4;
       border-radius: 10px;
