--- a/src/scss/landing.scss
+++ b/src/scss/landing.scss
@@ -7,7 +7,7 @@
 	align-items: center;
 	.title-banner {
 		width: 100%;
-		height: 50vh;
+		height: 60vh;
 		display: flex;
 		flex-direction: column;
 		justify-content: center;
@@ -54,6 +54,7 @@
 			padding: 20px;
 			margin: 5vh 0;
 			font-size: 20px;
+			font-family: $text-font;
 			background-color: $container-color;
 			border: 2px outset $container-shadow;
 			border-radius: 10px;
