--- a/src/scss/variables/_variables.scss
+++ b/src/scss/variables/_variables.scss
@@ -1,7 +1,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Alegreya:ital@0;1&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;1,300;1,400&display=swap');
 
-$background-color: white;
+// $background-color: white;
+// $container-color: hsl(200, 40%, 75%);
+// $container-shadow: hsl(200, 40%, 75%);
+// $text-shadow: hsl(180, 100%, 20%);
+// $title-container-color: #d7fbe88e;
+// $footer-color: #13614d;
+
+// $text-font: 'Alegreya', serif;
+// $title-font: 'Montserrat', sans-serif;
+
+// Old colors
+
+$background-color: #f7fbf9;
 $container-color: #d7fbe8;
 $container-shadow: #9df3c4;
 $text-shadow: #1fab89;
