--- a/src/scss/landing.scss
+++ b/src/scss/landing.scss
@@ -47,7 +47,7 @@
 		display: flex;
 		justify-content: center;
 		align-items: center;
-		min-height: 30vh;
+		min-height: 60vh;
 		width: 70%;
 		p {
 			width: auto;
@@ -58,7 +58,7 @@
 			background-color: $container-color;
 			border: 2px outset $container-shadow;
 			border-radius: 10px;
-			box-shadow: 7px 10px 10px $container-shadow;
+			// box-shadow: 7px 10px 10px $container-shadow;
 		}
 	}
 }
