--- a/src/css/services.css
+++ b/src/css/services.css
@@ -17,32 +17,27 @@
     font-size: 20px; }
   .services .our-services {
     width: 100%;
-    display: grid;
-    grid-template: 1fr 3fr / 1fr 1fr;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     height: 90vh;
-    background: linear-gradient(#9df3c4, white); }
+    background: linear-gradient(#9df3c4, #d7fbe8); }
+    .services .our-services .container {
+      margin-right: 3.3vw; }
     .services .our-services h1 {
-      grid-column-start: 1;
-      justify-self: center;
-      align-self: center;
       font-size: 5vw;
-      text-align: center; }
+      margin-bottom: 7vh;
+      position: relative;
+      left: -10px; }
     .services .our-services img {
-      grid-area: 1 / 2 / 3 / 3;
-      justify-self: center;
-      align-self: center;
-      max-width: 40vw;
-      max-height: 40vw;
-      height: 70vh;
-      width: 70vh;
+      width: 30vw;
+      height: 30vw;
       border-radius: 50%;
       object-fit: cover;
-      object-position: 50% 30%; }
+      object-position: 50% 30%;
+      margin-left: 3.3vw; }
     .services .our-services p {
-      justify-self: center;
-      align-self: start;
-      width: 40vw;
-      margin-top: 10vh; }
+      width: 30vw; }
   .services .prices {
     background: linear-gradient(#d7fbe8, white);
     width: 100%; }
