--- a/src/scss/services.scss
+++ b/src/scss/services.scss
@@ -20,34 +20,30 @@
 
 	.our-services {
 		width: 100%;
-		display: grid;
-		grid-template: 1fr 3fr / 1fr 1fr;
+		display: flex;
+		justify-content: center;
+		align-items: center;
 		height: 90vh;
-		background: linear-gradient($container-shadow, white);
+		background: linear-gradient($container-shadow, $container-color);
+		.container {
+			margin-right: 3.3vw;
+		}
 		h1 {
-			grid-column-start: 1;
-			justify-self: center;
-			align-self: center;
 			font-size: 5vw;
-			text-align: center;
+			margin-bottom: 7vh;
+			position: relative;
+			left: -10px;
 		}
 		img {
-			grid-area: 1 / 2 / 3 / 3;
-			justify-self: center;
-			align-self: center;
-			max-width: 40vw;
-			max-height: 40vw;
-			height: 70vh;
-			width: 70vh;
+			width: 30vw;
+			height: 30vw;
 			border-radius: 50%;
 			object-fit: cover;
 			object-position: 50% 30%;
+			margin-left: 3.3vw;
 		}
 		p {
-			justify-self: center;
-			align-self: start;
-			width: 40vw;
-			margin-top: 10vh;
+			width: 30vw;
 		}
 	}
 	.prices {
