--- a/src/css/contact.css
+++ b/src/css/contact.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Alegreya:ital@0;1&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;1,300;1,400&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;1,300;1,400&display=swap");
 .contact h1,
 .contact h2 {
   font-family: "Montserrat", sans-serif;
