--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -1,19 +1,21 @@
 @import url("https://fonts.googleapis.com/css2?family=Alegreya:ital@0;1&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;1,300;1,400&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;1,300;1,400&display=swap");
 nav {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
   height: 10vh;
-  background-color: #d7fbe8; }
+  background-color: #ecfaf3;
+  border-bottom: 1px solid #13614d; }
   nav .logo {
     display: flex;
     align-items: center; }
     nav .logo img {
       height: 8vh;
       width: auto;
-      margin: 0 1vh; }
+      margin-left: 5vh;
+      margin-right: 1vw; }
     nav .logo h4 {
       font-family: "Montserrat", sans-serif;
       font-size: 3.5vh; }
@@ -23,11 +25,25 @@ nav {
     justify-content: space-around;
     align-items: center;
     width: 50vw;
-    margin-right: 3vw; }
+    height: 100%; }
     nav ul li {
-      transition: all 0.3s; }
+      transition: all 0.3s;
+      height: 100%;
+      flex-grow: 1;
+      display: flex;
+      justify-content: center;
+      align-items: center; }
       nav ul li a {
-        font-family: "Alegreya", serif;
+        font-family: "Montserrat", sans-serif;
+        font-weight: 400;
         font-size: 30px;
         color: black;
         text-decoration: none; }
+    nav ul li:nth-child(1) {
+      background-color: #d7fbe8; }
+    nav ul li:nth-child(2) {
+      background-color: #9df3c4; }
+    nav ul li:nth-child(3) {
+      background-color: #62d2a2; }
+    nav ul li:nth-child(4) {
+      background-color: #1fab89; }
