--- a/src/scss/nav.scss
+++ b/src/scss/nav.scss
@@ -6,14 +6,16 @@ nav {
 	justify-content: space-between;
 	align-items: center;
 	height: 10vh;
-	background-color: $container-color;
+	background-color: $background-color;
+	border-bottom: 1px solid $footer-color;
 	.logo {
 		display: flex;
 		align-items: center;
 		img {
 			height: 8vh;
 			width: auto;
-			margin: 0 1vh;
+			margin-left: 5vh;
+			margin-right: 1vw;
 		}
 		h4 {
 			font-family: $title-font;
@@ -26,15 +28,33 @@ nav {
 		justify-content: space-around;
 		align-items: center;
 		width: 50vw;
-		margin-right: 3vw;
+		height: 100%;
 		li {
 			transition: all 0.3s;
+			height: 100%;
+			flex-grow: 1;
+			display: flex;
+			justify-content: center;
+			align-items: center;
 			a {
-				font-family: $text-font;
+				font-family: $title-font;
+				font-weight: 400;
 				font-size: 30px;
 				color: black;
 				text-decoration: none;
 			}
+		}
+		li:nth-child(1) {
+			background-color: $green1;
+		}
+		li:nth-child(2) {
+			background-color: $green2;
+		}
+		li:nth-child(3) {
+			background-color: $green3;
+		}
+		li:nth-child(4) {
+			background-color: $green4;
 		}
 	}
 }
