further styling added to landing page

--- a/src/scss/variables/_variables.scss
+++ b/src/scss/variables/_variables.scss
@@ -27,3 +27,8 @@ $green1: #d7fbe8;
 $green2: #9df3c4;
 $green3: #62d2a2;
 $green4: #1fab89;
+
+$gold1: #fde6a0;
+$gold2: hsl(71, 78%, 78%);
+$gold3: #ffbf00;
+$gold4: #bf9b30;
