--- a/src/css/landing.css
+++ b/src/css/landing.css
@@ -7,7 +7,7 @@
   align-items: center; }
   .landing-container .title-banner {
     width: 100%;
-    height: 60vh;
+    height: 50vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -38,17 +38,38 @@
         font-size: 2.5vw;
         font-style: italic; }
   .landing-container .description {
-    display: flex;
-    justify-content: center;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    justify-items: center;
     align-items: center;
-    min-height: 60vh;
-    width: 70%; }
-    .landing-container .description p {
-      width: auto;
-      padding: 20px;
-      margin: 5vh 0;
-      font-size: 20px;
-      font-family: "Alegreya", serif;
-      background-color: #d7fbe8;
-      border: 2px outset #9df3c4;
+    height: 40vh;
+    width: 100%; }
+    .landing-container .description .text-container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin: 10%;
+      background-color: #9df3c4;
       border-radius: 10px; }
+      .landing-container .description .text-container p {
+        flex-grow: 1;
+        padding: 3vh;
+        font-size: 20px;
+        font-family: "Alegreya", serif; }
+    .landing-container .description .call-to-action {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 100%;
+      height: 100%;
+      background-color: #9df3c4; }
+      .landing-container .description .call-to-action a {
+        font-size: 3vw;
+        color: #13614d;
+        text-shadow: 0 0 5px #9df3c4;
+        text-decoration: none;
+        font-family: "Montserrat", sans-serif;
+        padding: 20px;
+        border-radius: 10px;
+        border: 2px solid #e3f39b;
+        background: radial-gradient(#e3f39b, #ffbf00); }
