--- a/src/scss/landing.scss
+++ b/src/scss/landing.scss
@@ -7,7 +7,7 @@
 	align-items: center;
 	.title-banner {
 		width: 100%;
-		height: 60vh;
+		height: 50vh;
 		display: flex;
 		flex-direction: column;
 		justify-content: center;
@@ -44,21 +44,45 @@
 		}
 	}
 	.description {
-		display: flex;
-		justify-content: center;
+		display: grid;
+		grid-template-columns: 1fr 1fr;
+		justify-items: center;
 		align-items: center;
-		min-height: 60vh;
-		width: 70%;
-		p {
-			width: auto;
-			padding: 20px;
-			margin: 5vh 0;
-			font-size: 20px;
-			font-family: $text-font;
-			background-color: $container-color;
-			border: 2px outset $container-shadow;
+		height: 40vh;
+		width: 100%;
+		.text-container {
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			margin: 10%;
+			background-color: $green2;
 			border-radius: 10px;
-			// box-shadow: 7px 10px 10px $container-shadow;
+			p {
+				flex-grow: 1;
+				padding: 3vh;
+				font-size: 20px;
+				font-family: $text-font;
+				// box-shadow: 7px 10px 10px $container-shadow;
+			}
+		}
+		.call-to-action {
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			width: 100%;
+			height: 100%;
+			background-color: $green2;
+			a {
+				font-size: 3vw;
+				color: $footer-color;
+				text-shadow: 0 0 5px $green2;
+				text-decoration: none;
+				font-family: $title-font;
+				padding: 20px;
+				border-radius: 10px;
+				border: 2px solid $gold2;
+				background: radial-gradient($gold2, $gold3);
+			}
 		}
 	}
 }
