nav buttons made even size

--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -29,6 +29,7 @@ nav {
     nav ul li {
       transition: all 0.3s;
       height: 100%;
+      width: 25%;
       flex-grow: 1;
       display: flex;
       justify-content: center;
