--- a/src/scss/nav.scss
+++ b/src/scss/nav.scss
@@ -32,6 +32,7 @@ nav {
 		li {
 			transition: all 0.3s;
 			height: 100%;
+			width: 25%;
 			flex-grow: 1;
 			display: flex;
 			justify-content: center;
