--- a/src/scss/about.scss
+++ b/src/scss/about.scss
@@ -85,9 +85,17 @@
 				text-align: center;
 				width: 60%;
 				padding: 5%;
-				margin-bottom: 1%;
-				background-color: white;
+				background-color: $green1;
 				border-radius: 10px;
+			}
+			.tile-1 {
+				box-shadow: -7px 10px 10px $green4;
+			}
+			.tile-2 {
+				box-shadow: 7px 10px 10px $green4;
+			}
+			.tile-3 {
+				box-shadow: -7px 10px 10px $green4;
 			}
 		}
 	}
